# claude-code-guide-practice

./: ex_pipeline.py  pyproject.toml  test_pipeline.py  리드미.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.github/workflows/: claude-review.yml
